--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -12,6 +12,7 @@
     "react-jss": "^10.9.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
